--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,20 @@
   "homepage": "https://github.com/vence2013/Personal_digital_infomation",
   "private": true,
   "dependencies": {
-    "angular": "^1.8.2"
+    "angular": "^1.8.2",
+    "angular-file-upload": "^2.6.1",
+    "angular-clipboard": "^1.7.0",
+    "angular-tree-control": "^0.2.28",
+    "bootstrap": "^5.1.3",
+    "editor.md": "^1.5.0",
+    "font-awesome": "^5.15.4",
+    "jquery": "^3.6.0",
+    "popper.js": "^2.11.2",
+    "toastr": "^2.1.3",
+    "trumbowyg": "^2.25.1",
+    "d3": "^5.16.0",
+    "webcola": "^3.3.8",
+    "magnific-popup": "^1.1.0",
+    "moment": "^2.29.1"
   }
 }
