bower不再服务器设置过程中安装

--- a/Runtime/Docker/Dockerfile
+++ b/Runtime/Docker/Dockerfile
@@ -5,6 +5,6 @@ MAINTAINER vence2013
 COPY sources.list /etc/apt/sources.list
 
 RUN apt-get update && \
-    apt-get install -y mariadb-client
+    apt-get install -y git mariadb-client
 
 WORKDIR /web
