使用maridb数据库；成功启动app.js；安装samba

--- a/Runtime/Docker/Dockerfile
+++ b/Runtime/Docker/Dockerfile
@@ -5,6 +5,8 @@ MAINTAINER vence2013
 COPY sources.list /etc/apt/sources.list
 
 RUN apt-get update && \
-    apt-get install -y git mariadb-client
+    apt-get install -y mariadb-client
+
+ENV NODE_PATH=/usr/local/lib/node_modules
 
 WORKDIR /web
