--- a/Runtime/Script/docker_compose_pc.yml
+++ b/Runtime/Script/docker_compose_pc.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 
 services:
-  mysql:
+  mariadb:
     image: "mariadb:10.6.5"
     restart: "always"
     container_name: "${Project}_mariadb"    
@@ -22,6 +22,8 @@ services:
       - ${Data_dir}/:/data      
       - .:/web
     links:
-      - mysql
+      - mariadb
+    depends_on:
+      - mariadb
     ports:
       - "443:443" 
