--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
     "dotenv": "^14.2.0",
+    "editor.md": "^1.5.0",
     "glob": "^7.2.0",
     "koa": "^2.13.4",
     "koa-body": "^4.2.0",
