--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "d3": "^5.16.0",
     "webcola": "^3.3.8",
     "magnific-popup": "^1.1.0",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "jquery-notebook": "*"
   }
 }
