--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "angular-tree-control": "^0.2.28",
     "bootstrap": "^5.1.3",
     "editor.md": "^1.5.0",
-    "font-awesome": "^5.15.4",
+    "font-awsome": "^4.0.3",
     "jquery": "^3.6.0",
     "popper.js": "^2.11.2",
     "toastr": "^2.1.3",
